--- a/codes/DDA/RecurrenceOfSurgery_DDA.ipynb
+++ b/codes/DDA/RecurrenceOfSurgery_DDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 218,
    "id": "f69acb79-41b2-406a-8534-7fe9997be07a",
    "metadata": {
     "tags": []
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 219,
    "id": "c05e3a9e-00d4-449a-ac07-cbbd3a661204",
    "metadata": {
     "tags": []
@@ -99,7 +99,7 @@
        "      <td>14.4</td>\n",
        "      <td>0</td>\n",
        "      <td>-1.01</td>\n",
-       "      <td>2048.5</td>\n",
+       "      <td>2048.50</td>\n",
        "      <td>4</td>\n",
        "      <td>Down</td>\n",
        "      <td>0</td>\n",
@@ -123,40 +123,283 @@
        "      <td>17.8</td>\n",
        "      <td>0</td>\n",
        "      <td>-1.14</td>\n",
-       "      <td>1753.1</td>\n",
+       "      <td>1753.10</td>\n",
        "      <td>4</td>\n",
        "      <td>Up</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3PT</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>27.3</td>\n",
+       "      <td>10.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.77</td>\n",
+       "      <td>1749.00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Down</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4PT</td>\n",
+       "      <td>54.7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>49.2</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>19.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.58</td>\n",
+       "      <td>1796.20</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Down</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5PT</td>\n",
+       "      <td>53.8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>58.8</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.79</td>\n",
+       "      <td>2021.48</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Up</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1889</th>\n",
+       "      <td>1889</td>\n",
+       "      <td>1890PT</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>59.5</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>21.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2652.20</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Middle</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1890</th>\n",
+       "      <td>1890</td>\n",
+       "      <td>1891PT</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>47.7</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1795.80</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Down</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1891</th>\n",
+       "      <td>1891</td>\n",
+       "      <td>1892PT</td>\n",
+       "      <td>36.7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>44.6</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2624.40</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Down</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1892</th>\n",
+       "      <td>1892</td>\n",
+       "      <td>1893PT</td>\n",
+       "      <td>32.5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>32.2</td>\n",
+       "      <td>11.1</td>\n",
+       "      <td>17.7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1972.50</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Down</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1893</th>\n",
+       "      <td>1893</td>\n",
+       "      <td>1894PT</td>\n",
+       "      <td>49.5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38.9</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>27.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1574.40</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Middle</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 52 columns</p>\n",
+       "<p>1894 rows × 52 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0 환자ID  Large Lymphocyte  Location of herniation   ODI  가족력  \\\n",
-       "0           0  1PT              22.8                       3  51.0  0.0   \n",
-       "1           1  2PT              44.9                       4  26.0  0.0   \n",
+       "      Unnamed: 0    환자ID  Large Lymphocyte  Location of herniation   ODI  가족력  \\\n",
+       "0              0     1PT              22.8                       3  51.0  0.0   \n",
+       "1              1     2PT              44.9                       4  26.0  0.0   \n",
+       "2              2     3PT              53.0                       3   NaN  0.0   \n",
+       "3              3     4PT              54.7                       4  18.0  0.0   \n",
+       "4              4     5PT              53.8                       4   NaN  0.0   \n",
+       "...          ...     ...               ...                     ...   ...  ...   \n",
+       "1889        1889  1890PT              44.0                       1   NaN  0.0   \n",
+       "1890        1890  1891PT              30.8                       2   NaN  0.0   \n",
+       "1891        1891  1892PT              36.7                       3   NaN  0.0   \n",
+       "1892        1892  1893PT              32.5                       2   NaN  0.0   \n",
+       "1893        1893  1894PT              49.5                       2   NaN  0.0   \n",
        "\n",
-       "   간질성폐질환  고혈압여부  과거수술횟수  당뇨여부  ...  Modic change    PI    PT  Seg Angle(raw)  \\\n",
-       "0       0      0       0     0  ...             3  51.6  36.6            14.4   \n",
-       "1       0      0       0     0  ...             0  40.8   7.2            17.8   \n",
+       "      간질성폐질환  고혈압여부  과거수술횟수  당뇨여부  ...  Modic change    PI    PT  \\\n",
+       "0          0      0       0     0  ...             3  51.6  36.6   \n",
+       "1          0      0       0     0  ...             0  40.8   7.2   \n",
+       "2          0      0       1     0  ...             0  67.5  27.3   \n",
+       "3          0      1       0     0  ...             0  49.2  18.7   \n",
+       "4          0      1       0     0  ...             0  58.8  14.7   \n",
+       "...      ...    ...     ...   ...  ...           ...   ...   ...   \n",
+       "1889       0      0       0     0  ...             2  59.5  23.0   \n",
+       "1890       0      0       0     0  ...             0  47.7  20.2   \n",
+       "1891       0      0       0     0  ...             0  44.6  15.0   \n",
+       "1892       0      0       0     0  ...             2  32.2  11.1   \n",
+       "1893       0      0       0     0  ...             0  38.9   6.8   \n",
        "\n",
-       "   Vaccum disc   골밀도  디스크단면적  디스크위치  척추이동척도  척추전방위증  \n",
-       "0            0 -1.01  2048.5      4    Down       0  \n",
-       "1            0 -1.14  1753.1      4      Up       0  \n",
+       "      Seg Angle(raw)  Vaccum disc   골밀도   디스크단면적  디스크위치  척추이동척도  척추전방위증  \n",
+       "0               14.4            0 -1.01  2048.50      4    Down       0  \n",
+       "1               17.8            0 -1.14  1753.10      4      Up       0  \n",
+       "2               10.2            0 -1.77  1749.00      4    Down       0  \n",
+       "3               19.9            0 -1.58  1796.20      4    Down       0  \n",
+       "4                5.2            0 -0.79  2021.48      4      Up       0  \n",
+       "...              ...          ...   ...      ...    ...     ...     ...  \n",
+       "1889            21.8            0   NaN  2652.20      5  Middle       0  \n",
+       "1890             5.0            0   NaN  1795.80      4    Down       0  \n",
+       "1891            17.4            1   NaN  2624.40      4    Down       0  \n",
+       "1892            17.7            0   NaN  1972.50      5    Down       0  \n",
+       "1893            27.8            0   NaN  1574.40      5  Middle       0  \n",
        "\n",
-       "[2 rows x 52 columns]"
+       "[1894 rows x 52 columns]"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_ROS = pd.read_csv('../../datasets/RecurrenceOfSurgery.csv')\n",
-    "df_ROS.head(2)"
+    "df_ROS"
    ]
   },
   {
@@ -247,8 +490,11 @@
     "- 추출\n",
     "   - 열 단위 추출: df[['']], 컬럼 리스트로 한다. \n",
     "   - 행 단위 추출: iloc[:3]:0번째 행 ~2행\n",
-    "- 필터\n",
-    "- 요약 "
+    "- 필터: df.loc[conditions]\n",
+    "- 요약: pivot_table(index=, values =, aggfunc=)\n",
+    "   - index : group by\n",
+    "   - values : 대상 컬럼명\n",
+    "   - aggfunc : 집합구성? (ex: np.min , np.var, np.sum)"
    ]
   },
   {
@@ -295,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 207,
    "id": "410a66c7-90de-460a-bae7-9f641fdb0d35",
    "metadata": {
     "tags": []
@@ -381,7 +627,7 @@
        "1893   2  168      0  49.0     0  30  사무직  RH+AB     0"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2226,14 +2472,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b95dd534-27c6-4dbb-882d-bc5b7dbb8551",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 195,
    "id": "d7b1753c-984a-461c-b61a-014eb94adf48",
    "metadata": {
@@ -2605,12 +2843,187 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dcdcd2ec-167d-4cf5-9469-3cfd99588182",
+   "metadata": {},
+   "source": [
+    "### quest2 최종 데이터 사용\n",
+    "- 직업별 성별 빈도\n",
+    "- 직업별 혈액형 빈도"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a47e6649-3922-4abe-801c-6984fb29660b",
+   "id": "3da07bac-f23e-4403-9db6-77e9ba4abe87",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#df_ROS= pd.read_csv('../../datasets/RecurrenceOfSurgery.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "id": "1e1113ac-a24b-426b-9d83-d29dfa0571ec",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "id": "5a80decc-91d1-4ca3-bb12-2247f821b382",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>성별</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>직업</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>건설업</th>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>공무원</th>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>교사</th>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>군인</th>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>노동직</th>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>농업</th>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>무직</th>\n",
+       "      <td>164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>사무직</th>\n",
+       "      <td>449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>사업가</th>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>예술가</th>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>운동선수</th>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>운수업</th>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>의료직</th>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>자영업</th>\n",
+       "      <td>171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>주부</th>\n",
+       "      <td>114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>특수전문직</th>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>학생</th>\n",
+       "      <td>135</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        성별\n",
+       "직업        \n",
+       "건설업     17\n",
+       "공무원     51\n",
+       "교사      30\n",
+       "군인      90\n",
+       "노동직     42\n",
+       "농업      40\n",
+       "무직     164\n",
+       "사무직    449\n",
+       "사업가     39\n",
+       "예술가     10\n",
+       "운동선수    14\n",
+       "운수업     50\n",
+       "의료직     40\n",
+       "자영업    171\n",
+       "주부     114\n",
+       "특수전문직   23\n",
+       "학생     135"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 직업별 성별 빈도 구하기\n",
+    "df_ROS.pivot_table(index='직업', values='성별', aggfunc=np.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10401002-9cd0-479d-914d-ab8da898ed8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 직업별 혈액형 빈도 구하기"
+   ]
   }
  ],
  "metadata": {
