--- a/codes/pandass/begginners.ipynb
+++ b/codes/pandass/begginners.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
    "id": "a57b98b4-f19c-43dd-9a4a-7b99ddce2130",
    "metadata": {
     "tags": []
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 66,
    "id": "b9dc3dd1-c49f-4b5f-9016-6805b96b5604",
    "metadata": {
     "tags": []
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "id": "7cd1b499-579a-45e9-9eb5-953b158bcf72",
    "metadata": {
     "tags": []
@@ -111,7 +111,7 @@
        "4  50"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "id": "4de2b370-b4cb-4971-b44f-2ca677c03463",
    "metadata": {
     "tags": []
@@ -197,7 +197,7 @@
        "3  1000     과자  2019-12-31  반품"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "id": "5acf03eb-ec63-4c3c-94a9-758ab75e27f7",
    "metadata": {
     "tags": []
@@ -286,7 +286,7 @@
        "3  1000     과자  2019-12-31   반품"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 68,
    "id": "05e4f22c-b8f7-4fef-b655-1bfc488d951e",
    "metadata": {
     "tags": []
@@ -313,7 +313,7 @@
        " ['가격', '종류', '판매일자', '반품여부'])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 69,
    "id": "ccba96f6-246a-4760-891b-fe7ce829b992",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
        "RangeIndex(start=0, stop=4, step=1)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 70,
    "id": "99d0125a-a598-4e0b-8273-bc528a8c7319",
    "metadata": {
     "tags": []
@@ -360,7 +360,7 @@
        "       [1000, '과자', '2019-12-31', '반품']], dtype=object)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 71,
    "id": "222e6c07-b0b9-4f20-af74-572bc8024341",
    "metadata": {
     "tags": []
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 72,
    "id": "77acaa61-8d8e-4b6e-a67d-03ba4de913cf",
    "metadata": {
     "tags": []
@@ -448,7 +448,7 @@
        "3  1000   반품"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 73,
    "id": "b1129687-20c9-4f60-b6b7-49f95b31eca2",
    "metadata": {
     "tags": []
@@ -505,7 +505,7 @@
        "2  3000   정상"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,15 +519,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "ae4b0e53-9553-463c-a09e-61c36543c8bb",
+   "execution_count": 82,
+   "id": "c40097e3-f5ce-44a5-baf7-51015adba29e",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    False\n",
+       "1    False\n",
+       "2     True\n",
+       "3    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Series\n",
-    "# -index - data"
+    "# (df_salesdays_dropcol['가격'] >= 2500) | (df_salesdays_dropcol['가격'] >= 1000)\n",
+    "(df_salesdays_dropcol['반품여부'] == '정상') & (df_salesdays_dropcol['가격'] >= 2500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "fd06a49e-bca8-41f8-be22-be04a68ead88",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>가격</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>반품여부</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>반품</th>\n",
+       "      <td>1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>정상</th>\n",
+       "      <td>2000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        가격\n",
+       "반품여부      \n",
+       "반품    1000\n",
+       "정상    2000"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 요약\n",
+    "# df_salesdays_dropcol.pivot_table(index='반품여부', values ='가격')\n",
+    "# pd.pivot_table(data=df_salesdays_dropcol, index='반품여부', values ='가격')\n",
+    "import numpy as np\n",
+    "df_salesdays_dropcol.pivot_table(index='반품여부', values ='가격', aggfunc=np.min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "0fd15798-7214-4fc6-8100-584e48a3c8bf",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>가격</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>반품여부</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>반품</th>\n",
+       "      <td>1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>정상</th>\n",
+       "      <td>2500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        가격\n",
+       "반품여부      \n",
+       "반품    1000\n",
+       "정상    2500"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.pivot_table(data=df_salesdays_dropcol, index='반품여부', values ='가격')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b18723fa-28dd-44be-a643-7fc7fed116d2",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Series\n",
+    "- index - data"
    ]
   },
   {
@@ -584,9 +744,146 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e81613b2-a3a0-4dfc-82e6-688b082c5446",
+   "metadata": {},
+   "source": [
+    "### 통계 수치 표현"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "d850343d-2c75-40c9-85d8-66fc15977fb5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np #numpy 숫지만 다룸 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "71b0d995-3905-49f8-afff-79cdf36744f1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6,  4,  1,  3,  5,  3, 10,  7,  9])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.array([6, 4, 1, 3, 5, 3, 10, 7, 9])\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "ea3c91b7-aa1a-4568-9e19-94e1bec3d6bd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5.333333333333333, 48)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 평균, 합계\n",
+    "np.mean(arr), np.sum(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "79bb13fc-d8d3-410f-a987-2d722dbc429f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 중앙값\n",
+    "np.median(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "3f6261c8-3976-4a1e-94b5-a944eb3fb85e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 최소값, 최대값\n",
+    "print(np.min(arr), np.max(arr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "34ac9105-c45d-4096-9f88-280c980833fa",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7.777777777777778, 2.788866755113585)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 분산, 표준편차\n",
+    "np.var(arr), np.std(arr)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "131cb772-bf3d-41b1-a6d6-cc4161fc892d",
+   "id": "e387cfda-c8b7-445d-87c5-883693a220d8",
    "metadata": {},
    "outputs": [],
    "source": []
